<resources>
    <string name="app_name">ToySoul</string>
    <string name="main_logo">ToySoul</string>
    <string name="NO_INFORMATION">NO INFORMATION</string>
    <string name="SOLD_OUT">SOLD OUT</string>
    <string name="SELL">SELL</string>
    <string name="PRE_ORDER">PRE ORDER</string>
    <string name="DATE_ACQUISITION">date acquisition</string>
    <string name="P_PRICE">purchase price</string>
    <string name="PRICE">price</string>
    <string name="WEBVIEW_NOT_SUPPORT">webview url not provided</string>
    <string name="PROGRESS_DIALOG">Loading...</string>
    <string name="DEVELOPER">become developer</string>
    <string name="PRICE_INCREASE">INCREASE</string>
    <string name="PRICE_COMMON">COMMON</string>
    <string name="PRICE_FALLING">FALLING</string>
    <string name="TAB_LIST">list</string>
    <string name="TAB_INFO">info</string>
    <string name="TAB_ABOUT">about</string>
    <string name="FIX">Repairs in progress</string>
    <string name="PERMISSION">Privacy Policy</string>
    <string name="UPDATELIST">update list</string>
    <string name="AD">ad</string>
    <string name="QUESTION_RETURN">bug report</string>
    <string name="SERVICE">Terms of Service</string>
    <string name="COMPONENT_USE">component use</string>
    <string name="OK">ok</string>
    <string name="CANCEL">Cancel</string>
    <string name="TOY_SELL_STATE">Sell State</string>
    <string name="TOY_GAIN">Gain</string>
    <string name="TOY_WEB">Introduction URL</string>
    <string name="TOY_NAME">name</string>

    <string-array name="sell_state_array">
        <item>@string/SOLD_OUT</item>
        <item>@string/SELL</item>
        <item>@string/PRE_ORDER</item>
    </string-array>

    <string-array name="gain_state_array">
        <item>@string/PRICE_INCREASE</item>
        <item>@string/PRICE_COMMON</item>
        <item>@string/PRICE_FALLING</item>
    </string-array>

    <string-array name="keyword_array">
        <item>關鍵字</item>
        <item>價格</item>
    </string-array>

    <string name="IMAGE_URI">image uri</string>
    <string name="UPDATE_INFO">update info</string>
    <string name="INSERT_INFO">insert info</string>
    <string name="DELETE">delete</string>
    <string name="DELETE_CHECK">delete check</string>
    <string name="PREPARE_WAIT">preapare, function not ready</string>
    <string name="COUNT">count</string>
    <string name="NT">NT 0</string>
    <string name="CUMULATIVE">Cumulative amount</string>
    <string name="COLLECTION">Collection amount</string>
    <string name="NET">net earnings / net loss</string>
    <string name="NET_E">net earnings</string>
    <string name="NET_L">net loss</string>
    <string name="TEL_MAIL">Telor Mail</string>
    <string name="FEEDBACK_TITLE">issue</string>
    <string name="DETAIL">details</string>
    <string name="SEND">send</string>
    <string name="INPUT_ERROR">Incomplete iput</string>
    <string name="FEED_BACK_SUCCESSFUL">feed back successful</string>
    <string name="UPDATE_MESSAGE">Update Message</string>
    <string name="COMPONENT">component</string>
    <string name="Technology">technology</string>
    <string name="NO_ASK_AGAIN">Don\'t ask again next time</string>
    <string name="GUIDED">Guided Tour</string>
    <string name="CLOSE_GUIDED">close guided</string>
    <string name="THEME">Theme Change</string>
    <string name="NIGHT">Night</string>
    <string name="MORNING">Morning</string>
    <string name="PERMISSION_DENIED">Permission denied</string>
    <string name="SHARE">share</string>
    <string name="END">End</string>
    <string name="PATH">path</string>
    <string name="SCREENCUT_SAHRE_PATH">screencut share path</string>
    <string name="TAKE_SCREENSHOT_ERROR">take screen shot!</string>
    <string name="SEND_TO">send to</string>
    <string name="PERMISSION_NOT_GET">not get permission</string>
    <string name="FAVORITE">Favorite</string>
    <string name="SEARCH_VALUE">input search value</string>
    <string name="KEYWORD">Keyword</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="VERSION">version : %1$s</string>

    <string name="VERSION_NUMBER">update date : %1$d</string>
    <string name="VERSION_NUMBER_STRING">update date : %1$s, version :%2$s</string>
    <string name="VERSION_NUMBER_MIX">%1$s update date : %2$s, version :%3$d</string>

    <plurals name="numberOfSongsAvailable">
        <item quantity="one">Znaleziono %d piosenkę.</item>
        <item quantity="few">Znaleziono %d piosenki.</item>
        <item quantity="other">Znaleziono %d piosenek.</item>
    </plurals>

</resources>