<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/textViewPath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/colorDarkRed"
        android:gravity="center"
        android:text="@string/PATH"
        android:textColor="@color/colorBlack"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/textViewImagePath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewPath"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:text="@string/SCREENCUT_SAHRE_PATH"
        android:textColor="@color/colorBlack"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/imageViewShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonShare"
        android:layout_below="@id/textViewImagePath"
        android:layout_centerHorizontal="true"
        app:srcCompat="@mipmap/app_launcher_main_round" />

    <Button
        android:id="@+id/buttonShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonEnd"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/share_check"
        android:text="@string/SHARE" />

    <Button
        android:id="@+id/buttonEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/share_end"
        android:text="@string/END" />

</RelativeLayout>
