<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Toy Info(Beta)"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/toyName"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/TOY_NAME" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLines="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/toyUri"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/IMAGE_URI" />

            <EditText
                android:id="@+id/editTextToyUri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/toyDate"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/DATE_ACQUISITION" />

            <EditText
                android:id="@+id/editTextToyDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/toyBuyPrice"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/P_PRICE" />

            <EditText
                android:id="@+id/editTextBuyPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="1234567890"
                android:ems="6"
                android:inputType="phone|number"
                android:maxLines="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/toySellPrice"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/PRICE" />

            <EditText
                android:id="@+id/editTextSellPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="1234567890"
                android:ems="6"
                android:inputType="phone|number"
                android:maxLines="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/toyWeb"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/TOY_WEB" />

            <EditText
                android:id="@+id/editTextToyWeb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="100" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/toyGain"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/TOY_GAIN" />

            <Spinner
                android:id="@+id/spinnerGain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/toySellState"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/TOY_SELL_STATE" />

            <Spinner
                android:id="@+id/spinnerSellState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/CANCEL" />

            <Button
                android:id="@+id/buttonOK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/OK" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
