<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@color/colorLightBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background">

        <TextView
            android:id="@+id/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical"
            android:text="@string/KEYWORD"
            android:textColor="#FFF"
            android:textSize="32dp"
            android:transformPivotX="0dp"
            android:transformPivotY="0dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="5dp">

                <RadioButton
                    android:id="@+id/radioButtonPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/PRICE"
                    android:textColor="#ffffff" />

                <RadioButton
                    android:id="@+id/radioButtonName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/TOY_NAME"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <EditText
                android:id="@+id/editTextSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFF"
                android:ems="10"
                android:hint="@string/SEARCH_VALUE"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/colorLightBlack"
                android:textColorHint="@color/colorLightBlack" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>